--- a/kong.yml
+++ b/kong.yml
@@ -1,24 +1,11 @@
-_format_version: "3.0"
-_transform: true
+_format_version: "3.0"  # Add this line at the top
 
 services:
   - name: identity_service
-    url: http://host.docker.internal:3000  # Backend service URL
+    url: http://host.docker.internal:3000
     routes:
-      - name: all_routes
+      - name: identity_routes  # Unique name
         paths:
-          - /  # This acts as a wildcard for all paths
-        methods:
-          - GET
-          - POST
-          - PUT
-          - DELETE
-        strip_path: false
-  - name: wallet
-    url: http://host.docker.internal:8005
-    routes:
-      - name: all_routes
-        paths: 
           - /
         methods:
           - GET
@@ -26,30 +13,21 @@ services:
           - PUT
           - DELETE
         strip_path: false
-    plugins:
-      - name: jwt
-        config:
-          key_claim_name: "iss"  # Issuer or key identifier
-          anonymous: false      # Reject unauthenticated requests
-    
 
-    
-plugins:
-- name: rate-limiting
-  config:
-    minute: 100          # 100 requests per minute
-    policy: local
-    identifier: jwt:sub  # Rate limit by user ID from JWT
-# - name: proxy-cache
-#   config:
-#     cache_ttl: 300  # Cache for 5 minutes
-#     strategy: memory
-- name: cors
-  config:
-    origins: ["*"]           # Adjust to specific domains in production
-    methods: ["GET", "POST", "PUT", "DELETE"]    
-    credentials: true       # Allow JWT in credentials
-- name: file-log
-  config:
-    path: /var/log/api-gateway.log  # ensure that the log file path (/var/log/api-gateway.log) is writable by the Kong process.
-    log_body: true
+  - name: wallet
+    url: http://host.docker.internal:8005
+    routes:
+      - name: wallet_routes  # Unique name
+        paths:
+          - /
+        methods:
+          - GET
+          - POST
+          - PUT
+          - DELETE
+        strip_path: false
+    # plugins:
+    #   - name: jwt
+    #     config:
+    #       key_claim_name: "iss"
+    #       anonymous: false
