--- a/kong.yml
+++ b/kong.yml
@@ -21,6 +21,22 @@ services:
         methods: ["GET", "POST", "PUT", "DELETE"]
         strip_path: true
 
+  - name: billing_service
+    url: https://billingservice1.azurewebsites.net
+    routes:
+      - name: all_routes_
+        paths: ["/billing"]
+        methods: ["GET", "POST", "PUT", "DELETE"]
+        strip_path: true
+
+  - name: referencenumber_service
+    url: https://refererencenumber-akcug4h4d4fff8d9.canadacentral-01.azurewebsites.net
+    routes:
+      - name: all_routes__
+        paths: ["/reference"]
+        methods: ["GET", "POST", "PUT", "DELETE"]
+        strip_path: true
+
   - name: wallet
     url: https://e-wallet.azurewebsites.net
     routes:
@@ -94,3 +110,4 @@ services:
 #   config:
 #     path: /var/log/api-gateway.log  # ensure that the log file path (/var/log/api-gateway.log) is writable by the Kong process.
 #     log_body: true
+
